[tool.poetry]
name = "lab1"
version = "0.1.0"
description = ""
authors = ["triks <triks0001000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mimesis = "^14.0.0"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
